# ac01-automacao

./: pyproject.toml
controllers/: aplica_desconto.py  calcula_conta_restaurante.py  calcula_promocao.py  calcula_salario.py
models/: aplica_desconto.py  calcula_conta_restaurante.py  calcula_promocao.py  calcula_salario.py
tests/: test_aplica_desconto.py  test_aplica_promocao.py  test_calcula_salario.py  test_calcular_conta_restaurante.py
